Migrate usages to new Shape.Builder.layout(Class,Lookup).